--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Reset CSS -->
     <link rel="stylesheet" href="./src/css/reset.css">
+    <!-- Root CSS -->
+    <link rel="stylesheet" href="./src/css/root.css">
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -20,7 +22,7 @@
 
     <nav class="navbar">
       <div class="logo_div">
-        <img src="./src/photos/logo_red.svg" alt="logo">
+        <img src="./src/./assets/photos/logo_red.svg" alt="logo">
         <div class="logo_title">
           <h1>LIBRARY</h1>
           <hr>
@@ -39,7 +41,7 @@
       </div>
 
       <div class="join_div">
-        <img src="./src/photos/personal_icon.svg" alt="personal_icon">
+        <img src="./src/./assets/icons/personal_icon.svg" alt="personal_icon">
         <button>Join Us</button>
       </div>
     </nav>
