--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <span class="close_join_us">&times;</span>
         <div class="modal_inner_div">
           <p>Join Us</p>
-          <input type="text" placeholder="Fullname" />
-          <input type="email" placeholder="E-mail" />
+          <input id="joinUsFullname" type="text" placeholder="Fullname"/>
+          <input id="joinUsEmail" type="email" placeholder="E-mail"/>
           <p id="modalErrorMessage">Fill in the fields corectly!</p>
-          <button>Join</button>
+          <button id="join">Join</button>
         </div>
       </div>
     </section>
