--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     />
     <!-- Main CSS -->
     <link rel="stylesheet" href="./src/css/style.css" />
+    <link
+      rel="icon"
+      href="./src/assets/photos/logo_red.svg"
+      type="image/x-icon"
+    />
     <title>Library | Bookstore</title>
   </head>
   <body>
@@ -25,8 +30,8 @@
         <span class="close_join_us">&times;</span>
         <div class="modal_inner_div">
           <p>Join Us</p>
-          <input id="joinUsFullname" type="text" placeholder="Fullname"/>
-          <input id="joinUsEmail" type="email" placeholder="E-mail"/>
+          <input id="joinUsFullname" type="text" placeholder="Fullname" />
+          <input id="joinUsEmail" type="email" placeholder="E-mail" />
           <p id="modalErrorMessage">Fill in the fields corectly!</p>
           <button id="join">Join</button>
         </div>
@@ -46,7 +51,7 @@
         </ul>
       </div>
     </section>
-    
+
     <!-- header -->
 
     <header class="navbar">
@@ -120,19 +125,19 @@
         <div class="about_store_indicators">
           <div class="indicators_inner_div">
             <p>35</p>
-            <span>Branches the country</span>
+            <p class="indicators_p">Branches the country</p>
           </div>
           <div class="indicators_inner_div">
             <p>898</p>
-            <span>Products catalog</span>
+            <p class="indicators_p">Products catalog</p>
           </div>
           <div class="indicators_inner_div">
-            <p>88659</p>
-            <span>Buyers</span>
+            <p>18659</p>
+            <p class="indicators_p">Buyers</p>
           </div>
           <div class="indicators_inner_div">
             <p>72</p>
-            <span>Hours delivery to cities</span>
+            <p class="indicators_p">Hours delivery to cities</p>
           </div>
         </div>
       </section>
