fixed some responsive bugs

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
           <div class="footer_contact_div">
             <p>+994 50 123-45-67</p>
-            <button>Request a call</button>
+            <a href="tel:+994501234567">Request a call</a>
           </div>
         </div>
       </section>
