--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       <div class="responsive_modal_content">
         <span class="close" id="closeResponsiveModal">&times;</span>
         <ul class="responsive_modal_ul">
-          <li class="nav_active_li">Home</li>
-          <li>Catalog</li>
-          <li>About Store</li>
-          <li>Contact Us</li>
-          <li>Search</li>
+          <li><a href="./index.html" class="nav_active_li">Home</a></li>
+          <li><a href="">Catalog</a></li>
+          <li><a href="">About Store</a></li>
+          <li><a href="">Contact Us</a></li>
+          <li><a href="">Search</a></li>
         </ul>
       </div>
     </section>
