set href tags for catalog and about htmls

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <span class="close" id="closeResponsiveModal">&times;</span>
         <ul class="responsive_modal_ul">
           <li><a href="./index.html" class="nav_active_li">Home</a></li>
-          <li><a href="">Catalog</a></li>
-          <li><a href="">About Store</a></li>
+          <li><a href="./src/pages/catalog.html">Catalog</a></li>
+          <li><a href="./src/pages/about.html">About Store</a></li>
           <li><a href="">Contact Us</a></li>
           <li><a href="">Search</a></li>
         </ul>
@@ -67,8 +67,8 @@
       <div class="list_div">
         <ul class="nav_items">
           <li><a href="./index.html" class="nav_active_a">Home</a></li>
-          <li><a href="">Catalog</a></li>
-          <li><a href="">About Store</a></li>
+          <li><a href="./src/pages/catalog.html">Catalog</a></li>
+          <li><a href="./src/pages/about.html">About Store</a></li>
           <li><a href="">Contact Us</a></li>
           <li><a href="">Search</a></li>
         </ul>
@@ -179,8 +179,8 @@
         <!-- for responsive -->
         <ul class="footer_nav_items">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="">Catalog</a></li>
-          <li><a href="">About Store</a></li>
+          <li><a href="./src/pages/catalog.html">Catalog</a></li>
+          <li><a href="./src/pages/about.html">About Store</a></li>
           <li><a href="">Contact Us</a></li>
           <li><a href="">Search</a></li>
         </ul>
