Created users database and join us module  is done

--- a/index.html
+++ b/index.html
@@ -235,5 +235,8 @@
     ></script>
     <!-- Main JS-->
     <script src="./src/js/main.js"></script>
+     <!-- Join us module js -->
+     <script type="module" src="./src/js/joinUsModule.js">
+    </script>
   </body>
 </html>
