--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -14,10 +14,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-     <!-- Footer css -->
-    <link rel="stylesheet" href="../css/footer.css">
+    <!-- Footer css -->
+    <link rel="stylesheet" href="../css/footer.css" />
     <!-- Nav css -->
-    <link rel="stylesheet" href="../css/joinUs.css">
+    <link rel="stylesheet" href="../css/joinUs.css" />
     <!-- About Css -->
     <link rel="stylesheet" href="../css/about.css" />
     <title>About Store</title>
@@ -41,9 +41,9 @@
       <div class="responsive_modal_content">
         <span class="close" id="closeResponsiveModal">&times;</span>
         <ul class="responsive_modal_ul">
-          <li ><a href="../../index.html">Home</a></li>
-          <li> <a href="./catalog.html">Catalog</a></li>
-          <li ><a class="nav_active_li" href="./about.html">About Store</a></li>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="./catalog.html">Catalog</a></li>
+          <li><a class="nav_active_li" href="./about.html">About Store</a></li>
           <li><a href="">Contact Us</a></li>
           <li><a href="">Search</a></li>
         </ul>
@@ -64,7 +64,7 @@
 
       <div class="list_div">
         <ul class="nav_items">
-          <li><a href="../../index.html" >Home</a></li>
+          <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html" class="nav_active_a">About Store</a></li>
           <li><a href="">Contact Us</a></li>
@@ -85,8 +85,8 @@
       </div>
     </header>
     <main class="w-100">
-        <!-- Section 1 -->
-      <section class="w-100 section-1 ">
+      <!-- Section 1 -->
+      <section class="w-100 section-1">
         <!-- Texts div -->
         <div class="text-content">
           <h1>About Store</h1>
@@ -100,11 +100,10 @@
             in the order basket, after selecting the delivery city.
           </p>
         </div>
-            <!-- Image div -->
-            <div class="img-content">
-                <img  class="img-fluid" src="../assets/photos/books.svg" alt="">
-            </div>
-      
+        <!-- Image div -->
+        <div class="img-content">
+          <img class="img-fluid" src="../assets/photos/books.svg" alt="" />
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -174,5 +173,7 @@
       </div>
     </footer>
     <script src="../js/joinUs.js"></script>
+    <script type="module" src="../js/joinUsModule.js">
+    </script>
   </body>
 </html>
