--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -402,5 +402,8 @@
     <script src="../js/catalog.js"></script>
       <!-- Join us -->
       <script src="../js/joinUs.js"></script>
+      <!-- Join us module js -->
+      <script type="module" src="../js/joinUsModule.js">
+      </script>
   </body>
 </html>
