--- a/src/pages/AdminPanel.html
+++ b/src/pages/AdminPanel.html
@@ -91,15 +91,15 @@
             <!-- Responsive Mobile view -->
             <div class="mobile-container">
                 <div class="mobile-header">
-                    <img width="177px" src="./img/book-mobile-logo.svg" alt="book-mobile">
-                    <img src="./img/admin-panel-hamburger.svg" alt="list">
+                    <img width="177px" src="../assets/photos/book-mobile-logo.svg" alt="book-mobile">
+                    <img src="../assets/photos/admin-panel-hamburger.svg" alt="list">
                 </div>
             </div>
 
 
             <div class="account-logo">
                 <div class="profile-admin" style="cursor: pointer;">
-                    <img src="./img/user.svg" alt="user">
+                    <img src="../assets/photos/user.svg" alt="user">
                     <p>Admin</p>
                 </div>
             </div>
@@ -114,18 +114,18 @@
                         <div class="search-bar">
                             <input type="text" placeholder="Dan Brown">
                             <button>
-                                <img src="./img/search-icon.svg" alt="search-icon" width="17px">
+                                <img src="../assets/photos/search-icon.svg" alt="search-icon" width="17px">
                             </button>
                         </div>
 
                     </div>
                     <div class="search-history">
                         <div>
-                            <img src="./img/clock.svg" alt="clock">
+                            <img src="../assets/photos/clock.svg" alt="clock">
                             <p>Dan Brown Davinc</p>
                         </div>
                         <div>
-                            <img src="./img/clock.svg" alt="clock">
+                            <img src="../assets/photos/clock.svg" alt="clock">
                             <p>Dan Brown Angel</p>
                         </div>
                     </div>
@@ -234,7 +234,7 @@
                             <td>1</td>
                             <td>
                                 <div class="d-flex align-items-center justify-content-center gap-2">
-                                    <img src="./img/image 8.jpg" alt="image-book">
+                                    <img src="../assets/photos/image 8.jpg" alt="image-book">
                                     <p>Angels</p>
                                 </div>
                             </td>
