--- a/src/pages/AdminPanel.html
+++ b/src/pages/AdminPanel.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="First-login" style="display: none;" >
+    <div class="First-login" style="display: none;">
         <header>
             <div id="header_admin_logo">
 
@@ -42,7 +42,7 @@
     </div>
 
 
-    <section id="Second-panel" >
+    <section id="Second-panel">
         <section class="left">
             <aside>
                 <div id="second_admin_logo">
@@ -92,7 +92,8 @@
             <div class="mobile-container">
                 <div class="mobile-header">
                     <img width="177px" src="../assets/photos/book-mobile-logo.svg" alt="book-mobile">
-                    <img src="../assets/photos/admin-panel-hamburger.svg" alt="list">
+                    <img src="../assets/photos/admin-panel-hamburger.svg" alt="list" id="hamburger"
+                        style="cursor: pointer;">
                 </div>
             </div>
 
@@ -294,6 +295,7 @@
         </section>
 
     </section>
+    <script src="../js/hamburger.js"></script>
 </body>
 
 </html>
