--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -173,7 +173,6 @@
       </div>
     </footer>
     <script src="../js/joinUs.js"></script>
-    <script type="module" src="../js/joinUsModule.js">
-    </script>
+    <script type="module" src="../js/joinUsModule.js"></script>
   </body>
 </html>
