--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -20,10 +20,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-      <!-- Footer css -->
-      <link rel="stylesheet" href="../css/footer.css">
-      <!-- Nav css -->
-      <link rel="stylesheet" href="../css/joinUs.css">
+    <!-- Footer css -->
+    <link rel="stylesheet" href="../css/footer.css" />
+    <!-- Nav css -->
+    <link rel="stylesheet" href="../css/joinUs.css" />
     <!-- Catalog Css -->
     <link rel="stylesheet" href="../css/catalog.css" />
     <title>Catalog</title>
@@ -47,9 +47,9 @@
       <div class="responsive_modal_content">
         <span class="close" id="closeResponsiveModal">&times;</span>
         <ul class="responsive_modal_ul">
-          <li ><a href="../../index.html">Home</a></li>
-          <li> <a class="nav_active_li" href="./catalog.html">Catalog</a></li>
-          <li ><a  href="./about.html">About Store</a></li>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a class="nav_active_li" href="./catalog.html">Catalog</a></li>
+          <li><a href="./about.html">About Store</a></li>
           <li><a href="">Contact Us</a></li>
           <li><a href="">Search</a></li>
         </ul>
@@ -70,9 +70,9 @@
 
       <div class="list_div">
         <ul class="nav_items">
-          <li><a href="../../index.html" >Home</a></li>
+          <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html" class="nav_active_a">Catalog</a></li>
-          <li><a href="./about.html" >About Store</a></li>
+          <li><a href="./about.html">About Store</a></li>
           <li><a href="">Contact Us</a></li>
           <li><a href="">Search</a></li>
         </ul>
@@ -400,10 +400,9 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <!-- Catalog js -->
     <script src="../js/catalog.js"></script>
-      <!-- Join us -->
-      <script src="../js/joinUs.js"></script>
-      <!-- Join us module js -->
-      <script type="module" src="../js/joinUsModule.js">
-      </script>
+    <!-- Join us -->
+    <script src="../js/joinUs.js"></script>
+    <!-- Join us module js -->
+    <script type="module" src="../js/joinUsModule.js"></script>
   </body>
 </html>
