--- a/index.html
+++ b/index.html
@@ -236,7 +236,6 @@
     <!-- Main JS-->
     <script src="./src/js/main.js"></script>
      <!-- Join us module js -->
-     <script type="module" src="./src/js/joinUsModule.js">
-    </script>
+     <script type="module" src="./src/js/joinUsModule.js"></script>
   </body>
 </html>
