--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="../assets/photos/logo_red.svg"
+      type="image/x-icon"
+    />
     <!-- Reset Css -->
     <link rel="stylesheet" href="../css/reset.css" />
     <!-- Root Css -->
