--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="../assets/photos/logo_red.svg"
+      type="image/x-icon"
+    />
     <!-- Reset Css -->
     <link rel="stylesheet" href="../css/reset.css" />
     <!-- Root Css -->
@@ -27,6 +32,7 @@
     <!-- Catalog Css -->
     <link rel="stylesheet" href="../css/catalog.css" />
     <title>Catalog</title>
+    
   </head>
   <body>
     <section class="join_us_section" id="joinUsModal">
