--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             In our store you can find a book for every taste. A large
             assortment. Nice prices. Interesting stories.
           </p>
-          <button>Go to Catalog</button>
+          <a href="./src/pages/catalog.html">Go to Catalog</a>
         </div>
         <div class="header_books_div">
           <img src="./src/assets/photos/books_red_bg.svg" alt="books_red_bg" />
