update some wrongs

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -91,7 +91,7 @@
     </header>
     <main class="w-100">
       <!-- Section 1 -->
-      <section class="w-100 section-1">
+      <section class=" section-1">
         <!-- Texts div -->
         <div class="text-content">
           <h1>About Store</h1>
