Sliders renewed and design bugs fixed

--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -20,10 +20,13 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-      <!-- Footer css -->
-      <link rel="stylesheet" href="../css/footer.css">
-      <!-- Nav css -->
-      <link rel="stylesheet" href="../css/joinUs.css">
+    <!-- Footer css -->
+    <link rel="stylesheet" href="../css/footer.css" />
+    <!-- Nav css -->
+    <link rel="stylesheet" href="../css/joinUs.css" />
+    <!-- Slider -->
+    <link rel="stylesheet" href="../css/slick.css" />
+    <link rel="stylesheet" href="../css/slick-theme.css" />
     <!-- Catalog Css -->
     <link rel="stylesheet" href="../css/catalog.css" />
     <title>Catalog</title>
@@ -47,9 +50,9 @@
       <div class="responsive_modal_content">
         <span class="close" id="closeResponsiveModal">&times;</span>
         <ul class="responsive_modal_ul">
-          <li ><a href="../../index.html">Home</a></li>
-          <li> <a class="nav_active_li" href="./catalog.html">Catalog</a></li>
-          <li ><a  href="./about.html">About Store</a></li>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a class="nav_active_li" href="./catalog.html">Catalog</a></li>
+          <li><a href="./about.html">About Store</a></li>
           <li><a href="">Contact Us</a></li>
           <li><a href="">Search</a></li>
         </ul>
@@ -70,9 +73,9 @@
 
       <div class="list_div">
         <ul class="nav_items">
-          <li><a href="../../index.html" >Home</a></li>
+          <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html" class="nav_active_a">Catalog</a></li>
-          <li><a href="./about.html" >About Store</a></li>
+          <li><a href="./about.html">About Store</a></li>
           <li><a href="">Contact Us</a></li>
           <li><a href="">Search</a></li>
         </ul>
@@ -91,7 +94,6 @@
       </div>
     </header>
     <main class="w-100">
-      <!-- Section 1 -->
       <section class="sections section-1 w-100">
         <!-- Catagorie side of slider -->
         <div class="text-side">
@@ -100,233 +102,215 @@
             <button>All</button> <button>Fantastic</button>
             <button>Self-development</button> <button>Baby</button>
             <button>Classic</button>
+            <button>Classic</button>
+            <button>Classic</button>
+            <button>Classic</button>
+            <button>Classic</button>
+            <button>Classic</button>
           </div>
         </div>
         <!-- Slider -->
-        <div class="swiper">
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_2.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_3.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_4.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_5.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
+        <div class="slider-1">
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
             </div>
           </div>
-
-          <div class="swiper-pagination"></div>
-
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <div class="swiper-scrollbar"></div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+        </div>
+        <div class="arrows">
+          <div class="prevArrow">
+            <img src="../assets/icons/prevArrow.svg" alt="" />
+          </div>
+          <div class="nextArrow">
+            <img src="../assets/icons/nextArrow.svg" alt="" />
+          </div>
         </div>
       </section>
-      <!-- Section 2 -->
       <section class="sections section-2 w-100">
         <!-- Catagorie side of slider -->
         <div>
           <h1 class="w-100 text-center best-seller">Bestseller</h1>
         </div>
         <!-- Slider -->
-        <div class="swiper">
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_2.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_3.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_4.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_5.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
+        <div class="slider-2">
+          <div>
+            <div class="slider-card">
+              <img   class="books-img"src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
             </div>
           </div>
-
-          <div class="swiper-pagination"></div>
-
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <div class="swiper-scrollbar"></div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+        </div>
+        <div class="arrows">
+          <div class="prevArrow-bestseller">
+            <img src="../assets/icons/prevArrow.svg" alt="" />
+          </div>
+          <div class="nextArrow-bestseller">
+            <img src="../assets/icons/nextArrow.svg" alt="" />
+          </div>
         </div>
       </section>
-      <!-- Section 3 -->
       <section class="sections section-3 w-100">
         <!-- Catagorie side of slider -->
         <div>
           <h1 class="w-100 text-center new-releases">New releases</h1>
         </div>
-        <div class="swiper w-100">
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_2.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_3.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_4.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_5.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
+        <div class="slider-3">
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
             </div>
           </div>
-
-          <div class="swiper-pagination"></div>
-
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <div class="swiper-scrollbar"></div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img  class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+        </div>
+        <div class="arrows">
+          <div class="prevArrow-new">
+            <img src="../assets/icons/prevArrow.svg" alt="" />
+          </div>
+          <div class="nextArrow-new">
+            <img src="../assets/icons/nextArrow.svg" alt="" />
+          </div>
         </div>
       </section>
     </main>
@@ -397,13 +381,14 @@
       </div>
     </footer>
     <!-- Slider js Cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
+    <script src="../js/jquery-3-7-1-min.js"></script>
+    <script src="../js/slick.min.js"></script>
     <!-- Catalog js -->
     <script src="../js/catalog.js"></script>
-      <!-- Join us -->
-      <script src="../js/joinUs.js"></script>
-      <!-- Join us module js -->
-      <script type="module" src="../js/joinUsModule.js">
-      </script>
+    <!-- Join us -->
+    <script src="../js/joinUs.js"></script>
+    <!-- Join us module js -->
+    <script type="module" src="../js/joinUsModule.js"></script>
   </body>
 </html>
